--- a/react-project/public/index.html
+++ b/react-project/public/index.html
@@ -7,13 +7,13 @@
 
      <script src="intro.js"></script>
 
-    <!-- Latest compiled and minified CSS "React bootstrap"-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <!-- Latest compiled and minified CSS -->
+      <link rel="stylesheet" type="text/css" href="test.css">
 
     <title>React App</title>
   </head>
   <body>
-    
+
     <div id="root"></div>
   </body>
 </html>
