--- a/react-project/public/index.html
+++ b/react-project/public/index.html
@@ -8,7 +8,7 @@
      <script src="intro.js"></script>
 
         <!-- Latest compiled and minified CSS -->
-      <link rel="stylesheet" type="text/css" href="test.css">
+      <link rel="stylesheet" type="text/css" href="theme.css">
 
     <title>React App</title>
   </head>
